// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentBlock> Render empty 1`] = `
<div
  className="content-block"
/>
`;

exports[`<ContentBlock> Render with content 1`] = `
<div
  className="content-block"
>
  Some text
</div>
`;
